--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_auth: ^5.7.0 # Para autenticação
   cloud_firestore: ^5.6.12 # Para banco de dados Firestore
 
+  just_audio: ^0.9.36
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
