--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
 
   just_audio: ^0.9.36
 
+  fl_chart: ^0.67.0 # Para o gráfico
+  intl: ^0.18.1 # Para formatação de data
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
