--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.15.2 # Sempre necessário para qualquer serviço Firebase
-  firebase_auth: ^5.7.0 # Para autenticação
-  cloud_firestore: ^5.6.12 # Para banco de dados Firestore
+  http: ^1.2.1   # versão mais recente
+  shared_preferences: ^2.2.3  # Adicione esta linha
+  cloud_firestore: ^6.0.1 # Para banco de dados Firestore
   flutter_blue_plus: ^1.29.0
 
-  just_audio: ^0.9.36
+  just_audio: ^0.10.5
 
-  fl_chart: ^0.67.0 # Para o gráfico
-  intl: ^0.18.1 # Para formatação de data
+  fl_chart: ^0.68.0 # Para o gráfico
+  intl: ^0.20.2 # Para formatação de data
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -68,7 +68,7 @@ flutter:
 
   # Para adicionar assets ao seu aplicativo, adicione uma seção assets, como esta:
   assets:
-     - assets/ 
+     - assets/
      - assets/audios/
 
   # An image asset can refer to one or more resolution-specific "variants", see
