--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   fl_chart: ^0.68.0 # Para o gráfico
   intl: ^0.20.2 # Para formatação de data
 
+  google_fonts: ^6.1.0
+
+  url_launcher: ^6.1.10
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
