--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   google_fonts: ^6.1.0
 
   url_launcher: ^6.1.10
+  file_picker: ^10.3.3
+
+  mime: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
